# PMMP

./: LICENSE  README.md  conf.py  index.rst  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.obsidian/: workspace.json
docs/: PMMP.rst  conf.py  index.rst
docs/_build/doctrees/: PMMP.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  PMMP.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/PMMP/: functions.html  numbers.html  probability.html
docs/_build/html/_sources/: PMMP.rst.txt  modules.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py  index.rst
src/PMMP/: __init__.py  functions.py  main.py  numbers.py  probability.py  vector.py
src/PMMP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  tests.py
tests/quaternions/: test1.py
