[build-system]
requires = [
"setuptools>=61.0",
"wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "PMMP"
version = "0.0.5"
authors = [
  { name="PlayfulMathematician"},
]
description = "PMMP is a math library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PlayfulMathematician/PMMP"
"Bug Tracker" = "https://github.com/PlayfulMathematician/PMMP/issues"